--- a/project/app/templates/projects.html
+++ b/project/app/templates/projects.html
@@ -146,7 +146,7 @@ function displayProjects(projects) {
                 </div>
                 
                 <div class="flex space-x-2 ml-4">
-                    <a href="/view_project?id=${project.id}" 
+                    <a href="/project/${project.id}" 
                        class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-2 rounded-md text-sm">
                         <i class="fas fa-eye mr-1"></i>Anzeigen
                     </a>
